--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,4 +1,7 @@
 ---
 ---
-
+.wrapper {
+    width: 120%; /* Adjust this value as needed */
+    margin: 0 auto; /* This centers the wrapper horizontally */
+}
 @import "jekyll-theme-minimal";
