--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -5,12 +5,12 @@
 @import "jekyll-theme-minimal";
 
 .wrapper {
-  width:500px;
+  width:100%;
   margin:0 auto;
 }
 
 section {
-  width:300px;
+  width:90%;
   float:right;
   padding-bottom:50px;
 }
