--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -5,12 +5,12 @@
 @import "jekyll-theme-minimal";
 
 .wrapper {
-  width:100%;
+  width:860px;
   margin:0 auto;
 }
 
 section {
-  width:90%;
+  width:400px;
   float:right;
   padding-bottom:50px;
 }
