--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -4,3 +4,14 @@
 
 @import "jekyll-theme-minimal";
 
+.wrapper {
+  width:150%;
+  margin:0 auto;
+}
+
+section {
+  width:150%;
+  float:right;
+  padding-bottom:50px;
+}
+
