--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -5,12 +5,12 @@
 @import "jekyll-theme-minimal";
 
 .wrapper {
-  width:150%;
+  width:1000px;
   margin:0 auto;
 }
 
 section {
-  width:150%;
+  width:680px;
   float:right;
   padding-bottom:50px;
 }
