--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -4,3 +4,17 @@
 
 @import "jekyll-theme-minimal";
 
+@supports (hover: hover) {
+    .wrapper {
+        width:1000px;
+        margin:0 auto;
+    }
+
+    section {
+        width:600px;
+        float:right;
+        padding-bottom:50px;
+    }
+}
+
+
