--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -53,5 +53,7 @@
       ga('send', 'pageview');
     </script>
     {% endif %}
+      
+    <button onclick="topFunction()" id="topbtn" title="Go to top"> </button>
   </body>
 </html>
