--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -16,3 +16,42 @@
         padding-bottom:50px;
     }
 }
+
+#topbtn{
+    color:black;
+    padding-top:1.8em;
+    border-color:black;
+    text-decoration:none;
+    transition:all .3s ease-out;
+    display: none;
+    position: fixed;
+    bottom: 25px;
+    right: 25px;
+    z-index: 99;
+    border: none;
+    outline: none;
+    background-color: transparent;
+    cursor: pointer;
+    border-radius: 4px;
+}
+#topbtn:before{
+    content:'⇡';
+    font-size:1.2em;
+    position:absolute;
+    top:0;
+    left:50%;
+    margin-left:-.7em;
+    border:solid .13em black;
+    border-radius:5em;
+    width:1.4em;
+    height:1.6em;
+    line-height:1.3em;
+    transition:transform .5s ease-in;
+}
+#topbtn:hover{
+    color:pink;
+    border-color:pink;
+}
+#topbtn:hover:before{
+    transform: rotate(360deg);
+}
